--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <title>Local Basket</title>
 </head>
 
@@ -14,12 +14,12 @@
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6">
         
             <!-- Logo -->
-            <img class="h-32 w-32" src="img/logo-transparent.png" alt="LocalBasket-Logo">
+            <img class="h-32 w-32" src="/assets/img/logo-transparent.png" alt="LocalBasket-Logo">
   
             <!-- Nav Links -->
             <ul class="flex flex-col md:flex-row items-center gap-7 ">
             <li class="font-semibold hover:text-blue-500 "><a href="index.html">Home</a></li>
-            <li class="font-semibold hover:text-blue-500"><a href="account.html">Account</a></li>
+            <li class="font-semibold hover:text-blue-500"><a href="/pages/account.html">Account</a></li>
             </ul>
   
             <!-- Right Side (Search + Buttons) -->
@@ -36,18 +36,18 @@
                 </form>
   
                 <!-- Auth Buttons -->
-                <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="login.html">Login</a></button>
-                <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="admin.html">Your Shop</a></button>
+                <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/login.html">Login</a></button>
+                <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/admin.html">Your Shop</a></button>
                 </div>
             </div>
         </nav>
     <div class="jumbotron border rounded-lg  hover: bg-[#C6C5B9] justify-center items-center flex flex-col md:flex-row p-10 w-full">
-        <img class="w-1/2" src="img/localBusiness.jpeg" alt="">
+        <img class="w-1/2" src="/assets/img/localBusiness.jpeg" alt="">
         <div class="text-container justify-center text-center w-full items-center">
             <h1 class="text-black font-bold text-4xl">Sign-Up to Your Local Basket Now!</h1>
             <p class="justify mb-5 text-center">For exclusive deals and to connect with your own local and convenient market.</p>
 
-            <button class="bg-transparent mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="about.html">About Us</a></button>
+            <button class="bg-transparent mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/about.html">About Us</a></button>
         </div>
 
     </div>
@@ -68,7 +68,7 @@
                         type="password"
                         name="password"
                         placeholder="Password">
-                        <button class="p-2 bg-[#626F47] text-white border rounded-2xl"><a href="login.html">SignUp</a></button>
+                        <button class="p-2 bg-[#626F47] text-white border rounded-2xl"><a href="/pages/signup.html">SignUp</a></button>
                     </form>
                </div> 
             </div>
