--- a/pages/account.html
+++ b/pages/account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <title>Local Basket</title>
 </head>
 
@@ -14,14 +14,14 @@
       <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6">
         
         <!-- Logo -->
-        <img class="h-32 w-32" src="img/logo-transparent.png" alt="LocalBasket-Logo">
+        <img class="h-32 w-32" src="/assets/img/logo-transparent.png" alt="LocalBasket-Logo">
   
         <!-- Nav Links -->
         <ul class="flex flex-col md:flex-row items-center gap-7 ">
-          <li class="font-semibold hover:text-blue-500 "><a href="index.html">Home</a></li>
-          <li class="font-semibold hover:text-blue-500"><a href="orders.html">Orders</a></li>
-          <li class="font-semibold hover:text-blue-500"><a href="cart.html">My Cart</a></li>
-          <li class="font-semibold hover:text-blue-500"><a href="account.html">Account</a></li>
+          <li class="font-semibold hover:text-blue-500 "><a href="/index.html">Home</a></li>
+          <li class="font-semibold hover:text-blue-500"><a href="/pages/orders.html">Orders</a></li>
+          <li class="font-semibold hover:text-blue-500"><a href="/pages/cart.html">My Cart</a></li>
+          <li class="font-semibold hover:text-blue-500"><a href="/pages/account.html">Account</a></li>
         </ul>
   
         <!-- Right Side Nav -->
@@ -38,18 +38,18 @@
           </form>
   
           <!-- Auth Buttons -->
-          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="admin.html">Setup Store</a></button>
-          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="index.html">LogOut</a></button>
+          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/admin.html">Setup Store</a></button>
+          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/index.html">LogOut</a></button>
         </div>
         </div>
     </nav>
     <div class="hover:justify-center bg-[#C6C5B9] border rounded-2xl items-center flex flex-col md:flex-row p-10 w-full shadow-lg shadow-gray-300">
-        <img class="w-1/2" src="img/welcome.jpg" alt="">
+        <img class="w-1/2" src="/assets/img/welcome.jpg" alt="">
         <div class=" p-5 mt-5 justify-center text-center w-full items-center">
         <h1 class="text-black font-bold text-4xl text-black ">Welcome to Local Basket</h1>
         <p class="justify mb-5 text-center text-black">We deliver to your DoorSteps!!</p>
-        <button class="bg-transparent mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full "><a href="about.html">About Us</a></button>
-        <button class="bg-transparent mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="listings.html">View Listings</a></button>
+        <button class="bg-transparent mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full "><a href="/pages/about.html">About Us</a></button>
+        <button class="bg-transparent mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/listings.html">View Listings</a></button>
     </div>
 </div>
 
@@ -58,15 +58,15 @@
 
     <!-- CARD -->
     <div class=" flex flex-row border shadow-lg rounded-2xl w-max ">
-       <h1 class="p-5"><a class="border shadow-lg rounded-2xl bg-gray-300 p-2" href="cart.html">Continue Shopping</a></h1>
+       <h1 class="p-5"><a class="border shadow-lg rounded-2xl bg-gray-300 p-2" href="/pages/cart.html">Continue Shopping</a></h1>
         <div>
-            <img class="h-40" src="img/jordan.jpg" alt="Jordan Dior">
+            <img class="h-40" src="/assets/img/jordan.jpg" alt="Jordan Dior">
             <div>
                 <span class="m-3 font-bold">Dior X Jordan </span>
             </div>
         </div>
         <div class="ml-5">
-            <img class="h-40" src="img/ronaldo.jpg" alt="RealMadrid-Jersey">
+            <img class="h-40" src="/assets/img/ronaldo.jpg" alt="RealMadrid-Jersey">
             <div>
                 <span class="m-3 font-bold">Cr7 Jersey </span>
             </div>
