--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <title>Local Basket</title>
 </head>
 
@@ -14,14 +14,14 @@
       <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6">
         
         <!-- Logo -->
-        <img class="h-32 w-32" src="img/logo-transparent.png" alt="LocalBasket-Logo">
+        <img class="h-32 w-32" src="/assets/img/logo-transparent.png" alt="LocalBasket-Logo">
   
         <!-- Nav Links -->
         <ul class="flex flex-col md:flex-row items-center gap-7 ">
-          <li class="font-semibold hover:text-blue-500 "><a href="index.html">Home</a></li>
-          <li class="font-semibold hover:text-blue-500"><a href="orders.html">Orders</a></li>
-          <li class="font-semibold hover:text-blue-500"><a href="cart.html">My Cart</a></li>
-          <li class="font-semibold hover:text-blue-500"><a href="profile.html">My Profile</a></li>
+          <li class="font-semibold hover:text-blue-500 "><a href="/index.html">Home</a></li>
+          <li class="font-semibold hover:text-blue-500"><a href="/pages/orders.html">Orders</a></li>
+          <li class="font-semibold hover:text-blue-500"><a href="/pages/cart.html">My Cart</a></li>
+          <li class="font-semibold hover:text-blue-500"><a href="/pages/profile.html">My Profile</a></li>
         </ul>
   
         <!-- Right Side (Search + Buttons) -->
@@ -57,13 +57,13 @@
                     type="password"
                     name="password"
                     placeholder="Password">
-                    <button class="p-2 bg-[#626F47] text-white border rounded-2xl"><a href="account.html">Login</a></button>
+                    <button class="p-2 bg-[#626F47] text-white border rounded-2xl"><a href="/pages/account.html">Login</a></button>
                 </form>
            </div> 
            <!-- image -->
             <div class="w-1/2 ">
               <img class="sm:block hidden rounded-2xl" 
-              src="img/shoppinglogin.jpg" alt="">  
+              src="/assets/img/shoppinglogin.jpg" alt="">  
             </div>
         </div>
 </section>
