--- a/pages/account.html
+++ b/pages/account.html
@@ -8,16 +8,16 @@
     <title>Local Basket</title>
 </head>
 
-<body class="bg-[]">
+<body>
     <!-- NAV BAR -->
-    <nav class="mb-5 border rounded-lg border-white shadow-lg">
+    <nav class="mb-5 border rounded-lg border-white shadow-lg lg:w-full md:w-full sm:w-full">
       <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6">
         
         <!-- Logo -->
         <img class="h-32 w-32" src="/assets/img/logo-transparent.png" alt="LocalBasket-Logo">
   
         <!-- Nav Links -->
-        <ul class="flex flex-col md:flex-row items-center gap-7 ">
+        <ul class="flex md:flex-row lg:w-96 items-center gap-7 ">
           <li class="font-semibold hover:text-blue-500 "><a href="/index.html">Home</a></li>
           <li class="font-semibold hover:text-blue-500"><a href="/pages/orders.html">Orders</a></li>
           <li class="font-semibold hover:text-blue-500"><a href="/pages/cart.html">My Cart</a></li>
@@ -38,8 +38,8 @@
           </form>
   
           <!-- Auth Buttons -->
-          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/admin.html">Setup Store</a></button>
-          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/index.html">LogOut</a></button>
+          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full lg:w-max md:w-max sm:w-max"><a href="/pages/admin.html">Setup Store</a></button>
+          <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full lg:w-max md:w-max sm:w-max"><a href="/index.html">LogOut</a></button>
         </div>
         </div>
     </nav>
