--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="nav-contents flex flex-col md:flex-row items-center gap-4">
                 <!-- Search Bar -->
                 <form class="relative">
-                <input type="search" id="default-search" class="w-full md:w-auto sm:w-max p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500"/>
+                <input type="search" id="default-search" class="w-full md:w-auto p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500"/>
                 <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
                     <svg class="w-4 h-4 text-gray-500" fill="none" viewBox="0 0 20 20" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7a7 7 0 1 1-14 0 7 7 0 0 1 14 0z" />
@@ -36,9 +36,11 @@
                 </form>
   
                 <!-- Auth Buttons -->
-                <button class="bg-transparent w-max md:w-max sm:w-full mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/login.html">Login</a></button>
-                <button class="bg-transparent w-max md:hidden sm:w-full mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/admin.html">Your Shop</a></button>
+                 <div>
+                <button class="bg-transparent w-max md:w-auto sm:w-full mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/login.html">Login</a></button>
+                <button class="bg-transparent w-max md:w-auto sm:w-full mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/admin.html">Your Shop</a></button>
                 </div>
+            </div>
             </div>
         </nav>
     <div class="jumbotron border rounded-lg bg-[#C6C5B9] shadow-md hover:shadow-lg justify-center items-center flex flex-col md:flex-row p-10 w-full">
