--- a/index.html
+++ b/index.html
@@ -17,59 +17,79 @@
             <img class="h-32 w-32" src="/assets/img/logo-transparent.png" alt="LocalBasket-Logo">
   
             <!-- Nav Links -->
-            <ul class="flex flex-col md:flex-row items-center gap-7 ">
-            <li class="font-semibold hover:text-blue-500 "><a href="index.html">Home</a></li>
-            <li class="font-semibold hover:text-blue-500"><a href="/pages/account.html">Account</a></li>
-            </ul>
+            
   
             <!-- Right Side (Search + Buttons) -->
             <div class="nav-contents flex flex-col md:flex-row items-center gap-4">
                 <!-- Search Bar -->
                 <form class="relative">
-                <input type="search" id="default-search" class="w-full md:w-max p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500"/>
-                <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                    <svg class="w-4 h-4 text-gray-500" fill="none" viewBox="0 0 20 20" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7a7 7 0 1 1-14 0 7 7 0 0 1 14 0z" />
-                    </svg>
-                </div>
-                <button type="submit" class="absolute right-2.5 bottom-1.5 bg-transparent hover:bg-gray-300 text-black text-sm px-3 py-1 rounded-lg">Search</button>
+                    <input type="search" id="default-search" class="w-full md:w-max p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500"/>
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                        <svg class="w-4 h-4 text-gray-500" fill="none" viewBox="0 0 20 20" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7a7 7 0 1 1-14 0 7 7 0 0 1 14 0z" />
+                        </svg>
+                    </div>
+                    <button type="submit" class="absolute right-2.5 bottom-1.5 bg-transparent hover:bg-gray-300 text-black text-sm px-3 py-1 rounded-lg">Search</button>
                 </form>
   
                 <!-- Auth Buttons -->
                 <button class="bg-transparent w-max mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/login.html">Login</a></button>
-                </div>
             </div>
-        </nav>
-    <div class="jumbotron border rounded-lg  hover: bg-[#C6C5B9] justify-center items-center flex flex-col md:flex-row p-10 w-full">
+        </div>
+    </nav>
+    <div class="jumbotron border rounded-lg bg-[#C6C5B9] justify-center items-center flex flex-col md:flex-row p-10 w-full">
         <img class="w-1/2" src="/assets/img/localBusiness.jpeg" alt="">
         <div class="text-container justify-center text-center w-full items-center">
             <h1 class="text-black font-bold text-4xl">Sign-Up to Your Local Basket Now!</h1>
             <p class="justify mb-5 text-center">For exclusive deals and to connect with your own local and convenient market.</p>
-
             <button class="bg-transparent mb-3 font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full"><a href="/pages/about.html">About Us</a></button>
         </div>
-
     </div>
 
-<!-- SIGNUP -->
+    <!-- SIGNUP -->
     <section class="signup mt-10 bg-gray-150 w-full flex items-center flex-row justify-center">
         <div class="border-gray-300 ">
-             <!-- SignUp Container -->
+            <!-- SignUp Container -->
             <div class="bg-gray-50 flex rounded-2xl shadow-lg max-w-3xl p-5">
                 <!-- form -->
-               <div class="px-16">
+                <div class="px-16">
                     <h2 class="font-bold text-2xl text-gray-500">Sign-Up</h2>
-                    <form action=""class="flex flex-col gap-4">
-                        <input class="p-2 mt-8 border rounded-2xl" type="text"
-                        name="email"
-                        placeholder="Email">
-                        <input class="p-2 rounded-2xl "
-                        type="password"
-                        name="password"
-                        placeholder="Password">
-                        <button class="p-2 bg-[#626F47] text-white border rounded-2xl"><a href="/pages/signup.html">SignUp</a></button>
+                    <form id="registerForm" class="flex flex-col gap-4 mt-6 w-max">
+                        <input class="p-2 border rounded-2xl" 
+                               type="text" name="name" placeholder="Full Name" required>
+                        <input class="p-2 border rounded-2xl" 
+                               type="email" name="email" placeholder="Email" required>
+                        <input class="p-2 border rounded-2xl"
+                               type="password" name="password" placeholder="Password" required>
+                        <button type="submit" class="p-2 bg-[#626F47] text-white border rounded-2xl hover:bg-[#535f3a]">
+                            Sign Up
+                        </button>
                     </form>
-               </div> 
+                    <div class="mt-6">
+                        <div class="relative">
+                            <div class="absolute inset-0 flex items-center">
+                                <div class="w-full border-t border-gray-300"></div>
+                            </div>
+                            <div class="relative flex justify-center text-sm w-max">
+                                <span class="px-2 bg-gray-50 text-gray-500 w-max">Already have an account?</span>
+                            </div>
+                        </div>
+                        <div class="mt-6">
+                            <button onclick="window.location.href='/pages/login.html'" 
+                                    class="w-max bg-transparent font-semibold hover:text-black py-2 px-4 border border-black hover:border-transparent hover:bg-gray-200 rounded-full">
+                                Login Instead
+                            </button>
+                        </div>
+                    </div>
+                </div> 
+                <!-- Image -->
+                <div class="w-1/2 ">
+                    <img class="sm:block hidden rounded-2xl" 
+                         src="/assets/img/shopping-signup.jpg" alt="">  
+                </div>
             </div>
+        </div>
     </section>
-  </body>
+    <script type="module" src="/index.js"></script>
+</body>
+</html>
